--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,8 @@
   width: 100px;
   height: 100px;
   position: absolute;
-    top: 0px;
-    left: 0px;
+  top: 0px;
+  left: 0px;
   z-index: -1;
   /* The animation part: */
   animation-name: spin;
@@ -85,17 +85,21 @@
   -webkit-filter: blur(2px); */
 }
 @keyframes spin {
-  from {transform:rotate(0deg);}
-  to {transform:rotate(360deg);}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 ul {
   font-size: calc(10px + 2vmin);
   color: black;
-  list-style-type : none;
+  list-style-type: none;
 }
 .overLap {
   position: relative;
 }
-h1{
+h1 {
   margin-top: 10%;
 }
