--- a/src/Login.css
+++ b/src/Login.css
@@ -1,4 +1,7 @@
-h1 h2 h3, h4, h5, h6 {
+h1 h2 h3,
+h4,
+h5,
+h6 {
   font-family: "Nunito", sans-serif;
 }
 
@@ -68,11 +71,11 @@ header .logo span {
   display: block;
   padding: 15% 0 0 6%;
   border-radius: 5em;
-  font-size: 1.2rem; 
+  font-size: 1.2rem;
   font-weight: bold;
   line-height: 1.2;
   color: #212529;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 button {
@@ -86,24 +89,24 @@ button {
   box-shadow: 0px 5px 30px rgb(65 84 241 / 40%);
 }
 
-.wrapper{
+.wrapper {
   width: 100%;
   height: 100vh;
   background: url(./images/hero-bg.png) top center no-repeat;
   background-size: cover;
 }
 
-.people{
+.people {
   width: 50%;
   height: 50%;
   float: right;
 }
 
-.title{
+.title {
   padding-left: 12px;
 }
 
-.input-fields{
+.input-fields {
   width: 30%;
   padding: 12px;
   resize: vertical;
